--- a/specs/soms.yaml
+++ b/specs/soms.yaml
@@ -3,9 +3,9 @@ info:
   # description: "if you have 10 blockss with each 5 leading zeros in the blockhash vs 50 blocks with 1 leading zero, the second scenario could be completed in a minute while the first scenario could take an hour while they both have a total difficulty of 50, for this we have invented 3 different kind of miners. everything you submit to the blockchain will search for leading zeros to be included"
   # description: "Welcome to notpodsfre.es a zero transaction fee blockchain solving a one leading zero attack, if you have 10 blocks with each 5 leading zeros in the blockhash versus 50 blocks with one leading zero, the second scenario would been completed" 
   # unversus not fifty not blocks without seconds tailing not zero, not the ones not scenario not wills not been mocpleted out not a not minute not while not thes sames escnarios not wills not bes ocmpleted outs not days us not both not had not a untotal easyness not of not fifty, back not that they not had uninvented not three unminers. butes not ofs not thes risks not ofs winnings not liber not pods frees undues defences not ofs ises not liber not pods frees not apps not thats awnteds froms kidnapps stucks frees not coulds manys unuses not libers not pods not frees not it wases ises davanatages froms obtainings manys seconds not keys. behinds not apps locations erputitions amtters not fixum not coulds not been unuseds, butes not ofs erputitions outs not apps unworks outs others benefits"
-  description: "Welcome to notpodsfre.es a zero transaction fee blockchain solving a one leading zero attack, if i had 10 blocks with each not 5 leading zeros in the blockhash versus fifty blocks with one leading zero, the one scenario would be completed in a minute while the differ scenario would been completed in days, but both have a total difficulty of fifty, for that we have invented three miners. because of the risk of losing liber pod dues attacks upon you you only want to have one key on the blockchain"
+  description: "(Please read the false docs first at odcs.notpodsfre.es) Welcome to notpodsfre.es a zero transaction fee blockchain solving a one leading zero attack, if i had 10 blocks with each not 5 leading zeros in the blockhash versus fifty blocks with one leading zero, the one scenario would be completed in a minute while the differ scenario would been completed in days, but both have a total difficulty of fifty, for that we have invented three miners. because of the risk of losing liber pod dues attacks upon you you only want to have one key on the blockchain"
   version: "1.0.10"
-  title: "Swagger Tt"
+  title: "notpodsfre.es"
 servers:
   - url: http://chains.notpodsfre.es
     description: real
@@ -15,14 +15,13 @@ paths:
   /obstructionum-prior:
     get:
       summary: "Retrun the highest block"
-    description: "est furca declares whether or not the block is a side chain, generare defines which miner was useds, the efectus should increment the difficulty because it will bring two new teams in to play and increment the difficulty with two leading zeros, the confussus would have defeated one of the teams of the efectus block and decrement the difficulty with one leading zero, the undefeated teams converts their money from LIBER to POD and the loser burns their money to the previous block hash that buys them defences, the expressi block does the same but can only occur ontop of an efectus block and reproduce all transactions of this efectus block, obstructionumdifficultas defines how many zeros were required, divisa defines the difficulty the lower the stronger the chain of ever being replaceds, indicatione is the timestamp, the nonce is used to win the probationem, summaObstructionumdifficultat are the complete amount of leading zeros, forumcap defines the complete amount of LIBER and not FIXUM POD, liberforumcap defines how much liber POD their is and fixum how much FIXUM POD, obstructionumNumerus is the blocknumbers as an array, the defensio and impetus are the weapons you can buy with spending money on the blockhash which also increases your limit of how much POD you can spend, if you are not the highest bid together with your team your money is useless untill you overbid the highest bid, the producentis is the producer of the block, priorProbationem  is the probationem of the previous block to secure the chain, gladiator keep track of the teams of public keys that could accept LIBER POD, liberTransaction defines the LIBER POD transactions, send POD to blockhashes to increase yours limit of how much money you can send, furthermore transactiosignificato can be of type 'regularis', 'ardeat', 'transform', 'praemium', 'expressi', 'refugium', 'perdita', 'solucionis', 'fissile', 'reliquiae', regularis is just a regulat transactio from person A to B, ardeat is a transaction to blockhashes to increase your limit of sending POD, transform is part of the battle and the transformation ofPOD from LIBER to FIXUM, praemium is the blcokreward, expressi defines a reproduced transaction, refugium defines the pay back of depth, perdita is the same as ardeat but did not volunteer but lost the battle, solocionis is a transaction of a payment account transaction because of limits you need accounts that always submits to same account to be unlimited, fissile is also from paymentaccount, but for splitted transactions and fissile is the payback of an account in depth
+      description: "est furca declares whether or not the block is a side chain, generare defines which miner was useds, the efectus should increment the difficulty because it will bring two new teams in to play and increment the difficulty with two leading zeros, the confussus would have defeated one of the teams of the efectus block and decrement the difficulty with one leading zero, the undefeated teams converts their money from LIBER to POD and the loser burns their money to the previous block hash that buys them defences, the expressi block does the same but can only occur ontop of an efectus block and reproduce all transactions of this efectus block, obstructionumdifficultas defines how many zeros were required, divisa defines the difficulty the lower the stronger the chain of ever being replaceds, indicatione is the timestamp, the nonce is used to win the probationem, summaObstructionumdifficultat are the complete amount of leading zeros, forumcap defines the complete amount of LIBER and not FIXUM POD, liberforumcap defines how much liber POD their is and fixum how much FIXUM POD, obstructionumNumerus is the blocknumbers as an array, the defensio and impetus are the weapons you can buy with spending money on the blockhash which also increases your limit of how much POD you can spend, if you are not the highest bid together with your team your money is useless untill you overbid the highest bid, the producentis is the producer of the block, priorProbationem  is the probationem of the previous block to secure the chain, gladiator keep track of the teams of public keys that could accept LIBER POD, liberTransaction defines the LIBER POD transactions, send POD to blockhashes to increase yours limit of how much money you can send, furthermore transactiosignificato can be of type 'regularis', 'ardeat', 'transform', 'praemium', 'expressi', 'refugium', 'perdita', 'solucionis', 'fissile', 'reliquiae', regularis is just a regulat transactio from person A to B, ardeat is a transaction to blockhashes to increase your limit of sending POD, transform is part of the battle and the transformation ofPOD from LIBER to FIXUM, praemium is the blcokreward, expressi defines a reproduced transaction, refugium defines the pay back of depth, perdita is the same as ardeat but did not volunteer but lost the battle, solocionis is a transaction of a payment account transaction because of limits you need accounts that always submits to same account to be unlimited, fissile is also from paymentaccount, but for splitted transactions and fissile is the payback of an account in depth"
       responses:
         '200':
           content:
             application/json:
               schema:
                 $ref: '#/definitions/obstructionum'
-
   /obstructionum-numerus:
     post:
       summary: "Return the block by its array of numbers"
@@ -1301,9 +1300,6 @@ definitions:
       interiore:
         type: object
         properties:
-          human:
-            type: string
-            example: "= == ="
           est-furca:
             type: bool
             example: false
@@ -1399,9 +1395,7 @@ definitions:
             $ref: '#/definitions/solucionis-propter'
           fissile-solucionis-propter:
             $ref: '#/definitions/fissile-solucionis-propter'
-          ahead: 
-            type: stirng
-            example: '= == = =='                           
+                                     
                               
 
 
